[package]
name = "mikrotik-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["net","rt","io-util","macros","sync"]}
tokio-stream = "0.1.17"
log = { version = "0.4.22", features = [] }
thiserror = "2.0.9"
encoding_rs = "0.8.35"
[dev-dependencies]
tokio = { version = "1.42.0", features = ["net","rt","io-util","macros","sync","rt-multi-thread"]}
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"

